Upcode 26_8 chưa sửa css quản lý User

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
@@ -32,6 +32,9 @@
     }
 </style>
 <body>
+    @{
+        var userId = Context.Request.Cookies["UserId"];
+    }
     <!-- Add your site or application content here -->
     <!--pos page start-->
     <div class="pos_page">
@@ -69,7 +72,7 @@
                                     <ul>
                                         <li><a href="contact.html" title="Contact">Contact</a></li>
                                         <li><a asp-action="HoaDonCuaToi" asp-controller="HoaDonCustomer" asp-area="Customer">Hóa đơn của tôi</a></li>
-                                        <li><a href="my-account.html" title="My account">My account</a></li>
+                                        <li><a asp-controller="User" asp-action="Update" asp-route-id="@userId" title="My account">My account</a></li>
                                         <li><a asp-action="GioHangCuaBan" asp-controller="CustomerHome" asp-area="Customer">My cart</a></li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none;">
