--- a/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                                                                 </div>
                                                             </div>
                                                         </li>
-                                                        <li><a asp-action="Shop" asp-controller="Home">shop</a>
+                                                        <li><a asp-controller="Product" asp-action="Filter">shop</a>
                                                             <div class="mega_menu jewelry">
                                                                 <div class="mega_items jewelry">
                                                                     <ul>
