--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutHoaDonCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutHoaDonCustomer.cshtml
@@ -29,6 +29,9 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
+    @{
+        var userId = Context.Request.Cookies["UserId"];
+    }
     <!-- Add your site or application content here -->
     <!--pos page start-->
     <div class="pos_page">
@@ -66,7 +69,7 @@
                                     <ul>
                                         <li><a href="contact.html" title="Contact">Contact</a></li>
                                         <li><a asp-action="HoaDonCuaToi" asp-controller="HoaDonCustomer" asp-area="Customer">Hóa đơn của tôi</a></li>
-                                        <li><a href="my-account.html" title="My account">My account</a></li>
+                                        <li><a asp-controller="User" asp-action="Update" asp-route-id="@userId" title="My account">My account</a></li>
                                         <li><a href="cart.html" title="My cart">My cart</a></li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none;">
