--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Statistical/ThongKe.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Statistical/ThongKe.cshtml
@@ -37,10 +37,12 @@
     </div>
 
     <div class="row mt-4">
-        <div class="col-md-12">
-            <h3>Doanh thu 7 ngày gần nhất</h3>
-            <canvas id="revenue7DaysChart"></canvas>
-        </div>
+        <a asp-controller="Statistical" asp-action="ThongKeChiTiet">
+            <div class="col-md-12">
+                <h3>Doanh thu 7 ngày gần nhất</h3>
+                <canvas id="revenue7DaysChart"></canvas>
+            </div>
+        </a>
     </div>
 
     
